Implemented winners bracket and imported genetic-js for optimizations.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
+        <script src="node_modules\genetic-js\js\genetic-0.1.14.js"></script>
     </head>
     <body>
         <header>
