--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="My project for helping Smash Ultimate TOs with seeding regionals.">
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="src\script.js"></script>
         <script src="node_modules\genetic-js\js\genetic-0.1.14.js"></script>
     </head>
     <body>
